--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -27,7 +27,7 @@ h1 {
     font-size: $size__font--large;
 }
 
-span{
+span {
     font-size: $size__font--hint;
 }
 
@@ -49,7 +49,6 @@ mat-form-field {
 
     &.flex-align-center {
         display: flex;
-        flex-direction: column;
         align-items: center;
     }
 
@@ -60,8 +59,6 @@ mat-form-field {
     &.white {
         color: $color--white;
     }
-
-
 }
 
 h1,
